<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_header">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
    <string name="message_header">This button will launch my </string>
    <string name="message_Trailer"> APP</string>
</resources>

