<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_header"
            android:id="@+id/app_header"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/top_margin"/>

        <Button
            style="@style/buttonStyle"
            android:text="@string/spotify"
            android:id="@+id/spotify"
            android:onClick="onButtonClick"/>

        <Button
            style="@style/buttonStyle"
            android:text="@string/scores"
            android:id="@+id/scores"
            android:onClick="onButtonClick"/>
        <Button
            style="@style/buttonStyle"
            android:text="@string/library"
            android:id="@+id/library"
            android:onClick="onButtonClick"/>
        <Button
            style="@style/buttonStyle"
            android:text="@string/bigger"
            android:id="@+id/bigger"
            android:onClick="onButtonClick"/>
        <Button
            style="@style/buttonStyle"
            android:text="@string/reader"
            android:id="@+id/reader"
            android:onClick="onButtonClick"/>
        <Button
            style="@style/buttonStyle.Accent"
            android:text="@string/capstone"
            android:id="@+id/capstone"
            android:onClick="onButtonClick"/>
    </LinearLayout>
</ScrollView>

